@@ -15,12 +15,12 @@ all_from        'lib/Math/BigInt.pm';
 # As long as Math::BigInt defaults to using Math::BigInt::FastCalc as its
 # library (back-end), we require it (see RT #49569).
 requires        'perl'                          => 5.006002;
-requires        'Math::BigInt::FastCalc'        => 0.25;
 
 # See if old versions are installed, and if so, tell the user that
 # upgrading them would make little fluffy kittens much happier:
 
 my @checks;
+check_minimum_version ('Math::BigInt::FastCalc' => 0.25);
 check_minimum_version ('Math::BigInt::GMP'      => 1.35);
 check_minimum_version ('Math::BigInt::Pari'     => 1.15);
 check_minimum_version ('Math::BigRat'           => 0.2602);
